# cologne-trees-REST-API

./: .gitignore  README.md
cologne-treemap-api/: Dockerfile  Makefile  README.md  pyproject.toml  test_request.http
cologne-treemap-api/data/: some_data.json  suburb_number.json
cologne-treemap-api/src/cologne_treemap_api/api/: __main__.py  exceptions.py  server.py
cologne-treemap-api/src/cologne_treemap_api/treemap/: __init__.py  _by_geo.py  _by_tree_attr.py  _by_tree_geo.py  _make_fancy_shit.py  _my_application.py  my_application.py
data_preparation/: 1_1_make_base_data_2017.py  1_2_make_base_data_2020.py  1_3_make_base_data_merge.py  1_make_base_data.py  2_find_close_neighbours.py  3_check_neighbours.py  3_check_neighbours_district.py  4_add_predictions.py  5_export_geojson.py  6_export_reduced_data.py  Pipfile  README.md  cologne_districts_by_id.json  lat_lng_districts.json  make_data.py  object_types.json
data_preparation/data_prediction/: 0_create_base_data.py  1_age_classifier.py  2_prediction_by_neighbour_trees.py  README.md
data_preparation/data_prediction/data/: predictions_age_group.csv  predictions_by_radius.csv
